# sentinel-tool

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  compare_rescale.py  config.yaml  create_test_data.py  demo.py  extract_rpg_sample.py  investigate_ndvi.py  main.py  process_cube.py  pyproject.toml  research_metadata.py  rpg_extrait_bth.gpkg  test.py
demo_data/: rpg_extrait_bth_test.gpkg
docs/: agentic-workflow-demo.md
ds.zarr/: zarr.json
ds.zarr/band/: zarr.json
ds.zarr/band/c/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/: zarr.json
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/0/0/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/0/1/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/0/2/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/1/0/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/1/1/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/1/2/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/10/0/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/10/1/0/: 0
ds.zarr/stackstac-1ed75b949f78dd8129be0840245d3e45/c/10/2/0/: 0
ds.zarr/time/: zarr.json
ds.zarr/time/c/: 0
ds.zarr/x/: zarr.json
ds.zarr/x/c/: 0
ds.zarr/y/: zarr.json
ds.zarr/y/c/: 0
input/2020-06-01_2023-07-01/: parcels.gpkg
output/: sentinel_time_series.parquet
scripts/: debug_plot.py  draw_parcel.py  plot_indice_serie.py
src/: config.py  main.py  math_engine.py  orchestrator.py  processing.py  stac_fetcher.py
tests/: test_config.py  test_math_engine.py  test_stac_fetcher.py
(+225 files in other folders)
